# RAG-Studio

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_tests.bat  system_spec.md
.github/: agents.json  copilot-instructions.md
.github/agents/: architect.md  ba.md  developer.md  qa.md
.github/skills/code-review/: SKILL.md
.github/skills/langgraph-patterns/: SKILL.md
.github/skills/langsmith-eval/: SKILL.md
.github/skills/pr-description/: SKILL.md
.github/skills/qdrant-operations/: SKILL.md
.github/skills/rag-best-practices/: SKILL.md
.github/skills/ui-design/: SKILL.md
scripts/: download_models.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/locales/: en.json  ru.json
src/generate/: __init__.py
src/graph/: __init__.py  builder.py  nodes.py  session.py  state.py
src/ingestion/: __init__.py  chunker.py  embedder.py  parser.py  router.py
src/retrieve/: __init__.py  orchestrator.py
src/vector_store/: __init__.py  client.py
tests/: __init__.py  test_deployment.py  test_security.py
tests/api/: __init__.py  test_chat_e2e.py  test_chat_ui.py  test_settings_api.py  test_settings_reingest.py  test_ui_content.py  test_ui_navigation.py
tests/e2e/: test_rag_pipeline.py
tests/graph/: __init__.py  test_builder.py  test_nodes.py  test_state.py
tests/i18n/: __init__.py
tests/ingestion/: __init__.py  test_ingestion.py
tests/retrieve/: __init__.py  test_orchestrator.py
tests/vector_store/: __init__.py  test_persistence.py
(+14 files in other folders)
